# katarynka-song-streaming

./: Dockerfile  README.md  client.py  main.py  music.py  pyproject.toml
src/streaming/: main.py  music.py
