[tool.poetry]
name = "song-streaming"
version = "0.1.0"
description = ""
authors = ["b-kuch <58431879+b-kuch@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "song_streaming"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
websockets = "^10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
